added tmouts/retries/extended fail processing
